[package]
name = "jupiter-sdk-vmm"
version = "0.1.4"
edition = "2024"
description = "Scale VMM adapter implementing Jupiter's AMM interface"
license = "Apache-2.0"

[dependencies]
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface.git", rev = "9d080ce96c3fac9117c21df3f362be702953b4d5" }
anyhow = "1"
borsh = { version = "1.5.7", features = ["derive"] }
rust_decimal = "=1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.9"
solana-account = { version = "3.4.0", features = ["serde"] }
solana-instruction = "=3.1.0"
solana-pubkey = { version = "=4.0.0", features = ["borsh", "curve25519", "sha2"] }
