[package]
name = "jupiter-sdk-vmm"
version = "0.1.4"
edition = "2024"
description = "Scale VMM adapter implementing Jupiter's AMM interface"
license = "Apache-2.0"

[dependencies]
jupiter-amm-interface = "0.6.1"
anyhow = "1"
borsh = { version = "1.5.7", features = ["derive"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.9"
solana-instruction = "~2.3.3"
solana-account-decoder = "~2.3.9"
solana-pubkey = "~2.4.0"
